fix bottom gap when filtering in tableview

--- a/src/renderer/assets/styles/header.scss
+++ b/src/renderer/assets/styles/header.scss
@@ -55,7 +55,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 30px 20px;
+    padding: 30px 20px 0;
     height: calc(100% - 100px);
 
     & button {
